# aimnetcentral

./: .actrc  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  Makefile  README.md  codecov.yaml  mkdocs.yml  pyproject.toml
.devcontainer/: devcontainer.json
.github/: dependabot.yml
.github/actions/setup-uv-env/: action.yml
.github/workflows/: claude-code-review.yml  gpu-tests.yml  main.yml  on-release-main.yml
aimnet/: __init__.py  base.py  cli.py  config.py  nbops.py  ops.py  py.typed
aimnet/calculators/: __init__.py  aimnet2ase.py  calculator.py  model_registry.py  model_registry.yaml  nbmat.py
aimnet/data/: sgdataset.py
aimnet/models/: aimnet2.py  base.py
aimnet/modules/: aev.py  core.py  lr.py
aimnet/train/: loss.py  metrics.py  pt2jpt.py  train.py  utils.py
docs/api/: calculators.md  config.md  data.md  index.md  modules.md
tests/: conftest.py  test_ase.py  test_calculator.py  test_calculator_gpu.py  test_config.py  test_lr.py  test_model.py  test_nbops.py  test_ops.py
